[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprite/UI/PlayerShuXing.gd" type="Script" id=1]
[ext_resource path="res://Sprite/AttakPlayer01.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Font/simhei.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Font/simhei.ttf"

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Font/simhei.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = SubResource( 5 )

[node name="PlayerShuXing" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 182.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( -72, 56 )

[node name="lblDengJI" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "等级："

[node name="lblTiZhi" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 32.0
margin_right = 45.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "体质："

[node name="lblLiLiang" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 56.0
margin_right = 45.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "力量："

[node name="lblNaiLi" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 80.0
margin_right = 45.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "耐力："

[node name="btnSava" type="Button" parent="Panel"]
margin_left = 45.0
margin_top = 240.0
margin_right = 85.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 4 )
text = "保存"

[node name="lblShengMing" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 136.0
margin_right = 72.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 63, 8 )
custom_fonts/font = SubResource( 2 )
text = "生命："

[node name="lblShangHai" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 152.0
margin_right = 72.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "伤害："

[node name="lblFangYu" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 168.0
margin_right = 72.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 2 )
text = "防御："

[node name="lblTiZhiNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
text = "10"

[node name="btnTiZhiJia" type="Button" parent="Panel"]
margin_left = 88.0
margin_top = 32.0
margin_right = 106.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "+"

[node name="btnTiZhiJian" type="Button" parent="Panel"]
margin_left = 112.0
margin_top = 32.0
margin_right = 130.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "-"

[node name="lblLiLiangNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 56.0
margin_right = 88.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 6 )
text = "10"

[node name="btnLiLiangJia" type="Button" parent="Panel"]
margin_left = 88.0
margin_top = 56.0
margin_right = 106.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 4 )
text = "+"

[node name="btnLiLiangJian" type="Button" parent="Panel"]
margin_left = 112.0
margin_top = 56.0
margin_right = 130.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 4 )
text = "-"

[node name="lblNaiLiNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 6 )
text = "10"

[node name="btnNaiLiJia" type="Button" parent="Panel"]
margin_left = 88.0
margin_top = 80.0
margin_right = 106.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 4 )
text = "+"

[node name="btnNaiLiJian" type="Button" parent="Panel"]
margin_left = 112.0
margin_top = 80.0
margin_right = 130.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 4 )
text = "-"

[node name="lblShengMingNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 136.0
margin_right = 88.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 6 )
text = "150"

[node name="lblShangHaiNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 152.0
margin_right = 88.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 6 )
text = "41"

[node name="lblFangYuNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 168.0
margin_right = 88.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 6 )
text = "15"

[node name="lblDengJiNum" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="lblJingYan" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 192.0
margin_right = 45.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 2 )
text = "当前经验："

[node name="lblJingYanuNum" type="Label" parent="Panel"]
margin_left = 64.0
margin_top = 192.0
margin_right = 120.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="lblJingYan2" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 206.0
margin_right = 45.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 2 )
text = "升级经验："

[node name="lblJingYanuNum2" type="Label" parent="Panel"]
margin_left = 64.0
margin_top = 206.0
margin_right = 120.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 6 )
text = "15"

[node name="btnShengJi" type="Button" parent="Panel"]
margin_left = 128.0
margin_top = 192.0
margin_right = 168.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 4 )
text = "升级"

[node name="lblShuXingDian" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 99.0
margin_right = 45.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "属性点："

[node name="lblShuXingDianNum" type="Label" parent="Panel"]
margin_left = 57.0
margin_top = 99.0
margin_right = 97.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 6 )
text = "10"

[node name="btnCannel" type="Button" parent="Panel"]
margin_left = 128.0
margin_top = 240.0
margin_right = 168.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 4 )
text = "返回"

[node name="lblZBShengMing" type="Label" parent="Panel"]
margin_left = 88.0
margin_top = 136.0
margin_right = 176.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 63, 8 )
custom_fonts/font = SubResource( 2 )
text = "装备生命："

[node name="lblZBShangHai" type="Label" parent="Panel"]
margin_left = 88.0
margin_top = 152.0
margin_right = 176.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "装备伤害："

[node name="lblZBFangYu" type="Label" parent="Panel"]
margin_left = 88.0
margin_top = 168.0
margin_right = 176.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 2 )
text = "装备防御："

[node name="lblJingYanuNum3" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 220.0
margin_right = 65.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 6 )
text = "*宠物属性跟随玩家属性"

[node name="AttakPlayer01" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 22 )

[node name="TimerTZ" type="Timer" parent="."]

[node name="TimerLL" type="Timer" parent="."]

[node name="TimerNL" type="Timer" parent="."]

[node name="TimerTZJian" type="Timer" parent="."]

[node name="TimerLLJian" type="Timer" parent="."]

[node name="TimerNLJian" type="Timer" parent="."]

[connection signal="pressed" from="Panel/btnSava" to="." method="_on_btnSava_pressed"]
[connection signal="button_down" from="Panel/btnTiZhiJia" to="." method="_on_btnTiZhiJia_button_down"]
[connection signal="button_up" from="Panel/btnTiZhiJia" to="." method="_on_btnTiZhiJia_button_up"]
[connection signal="pressed" from="Panel/btnTiZhiJia" to="." method="_on_btnTiZhiJia_pressed"]
[connection signal="button_down" from="Panel/btnTiZhiJian" to="." method="_on_btnTiZhiJian_button_down"]
[connection signal="button_up" from="Panel/btnTiZhiJian" to="." method="_on_btnTiZhiJian_button_up"]
[connection signal="pressed" from="Panel/btnTiZhiJian" to="." method="_on_btnTiZhiJian_pressed"]
[connection signal="button_down" from="Panel/btnLiLiangJia" to="." method="_on_btnLiLiangJia_button_down"]
[connection signal="button_up" from="Panel/btnLiLiangJia" to="." method="_on_btnLiLiangJia_button_up"]
[connection signal="pressed" from="Panel/btnLiLiangJia" to="." method="_on_btnLiLiangJia_pressed"]
[connection signal="button_down" from="Panel/btnLiLiangJian" to="." method="_on_btnLiLiangJian_button_down"]
[connection signal="button_up" from="Panel/btnLiLiangJian" to="." method="_on_btnLiLiangJian_button_up"]
[connection signal="pressed" from="Panel/btnLiLiangJian" to="." method="_on_btnLiLiangJian_pressed"]
[connection signal="button_down" from="Panel/btnNaiLiJia" to="." method="_on_btnNaiLiJia_button_down"]
[connection signal="button_up" from="Panel/btnNaiLiJia" to="." method="_on_btnNaiLiJia_button_up"]
[connection signal="pressed" from="Panel/btnNaiLiJia" to="." method="_on_btnNaiLiJia_pressed"]
[connection signal="button_down" from="Panel/btnNaiLiJian" to="." method="_on_btnNaiLiJian_button_down"]
[connection signal="button_up" from="Panel/btnNaiLiJian" to="." method="_on_btnNaiLiJian_button_up"]
[connection signal="pressed" from="Panel/btnNaiLiJian" to="." method="_on_btnNaiLiJian_pressed"]
[connection signal="pressed" from="Panel/btnShengJi" to="." method="_on_btnShengJi_pressed"]
[connection signal="pressed" from="Panel/btnCannel" to="." method="_on_btnCannel_pressed"]
[connection signal="timeout" from="TimerTZ" to="." method="_on_TimerTZ_timeout"]
[connection signal="timeout" from="TimerLL" to="." method="_on_TimerLL_timeout"]
[connection signal="timeout" from="TimerNL" to="." method="_on_TimerNL_timeout"]
[connection signal="timeout" from="TimerTZJian" to="." method="_on_TimerTZJian_timeout"]
[connection signal="timeout" from="TimerLLJian" to="." method="_on_TimerLLJian_timeout"]
[connection signal="timeout" from="TimerNLJian" to="." method="_on_TimerNLJian_timeout"]
